--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .hidden {
   display: none;
 }
