--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  /* background-image: url("../static/images/0.jpeg"); */
 }
 
 .hidden {
